# g4halfspace

./: CMakeLists.txt  README.md  vis.mac
include/: G4FlukaReader.hh  G4HalfSpaceAARBox.hh  G4HalfSpaceArbitrary.hh  G4HalfSpaceCircularCone.hh  G4HalfSpaceCircularCylinder.hh  G4HalfSpaceEllipsoid.hh  G4HalfSpaceEllipticCylinder.hh  G4HalfSpacePlane.hh  G4HalfSpaceQuadric.hh  G4HalfSpaceRBox.hh  G4HalfSpaceReader.hh  G4HalfSpaceRotation.hh  G4HalfSpaceSolid.hh  G4HalfSpaceSphere.hh  G4HalfSpaceTest.hh  G4HalfSpaceTransformation.hh  G4HalfSpaceWedge.hh  G4HalfSpaceXACircularCylinder.hh  G4HalfSpaceXAEllipticalCylinder.hh  G4HalfSpaceXYPlane.hh  G4HalfSpaceXZPlane.hh  G4HalfSpaceYACircularCylinder.hh  G4HalfSpaceYAEllipticalCylinder.hh  G4HalfSpaceYZPlane.hh  G4HalfSpaceZACircularCylinder.hh  G4HalfSpaceZAEllipticalCylinder.hh  G4HalfSpaceZone.hh  G4ImplicitSurfaceCGAL.hh  G4LoaderFluka.hh  G4SurfaceMeshCGAL.hh  G4VHalfSpace.hh  G4VHalfSpaceReader.hh  G4VSurfaceMesh.hh  utils.hh
src/: G4FlukaReader.cc  G4HalfSpaceAARBox.cc  G4HalfSpaceArbitrary.cc  G4HalfSpaceCircularCone.cc  G4HalfSpaceCircularCylinder.cc  G4HalfSpaceEllipsoid.cc  G4HalfSpaceEllipticCylinder.cc  G4HalfSpacePlane.cc  G4HalfSpaceQuadric.cc  G4HalfSpaceRBox.cc  G4HalfSpaceReader.cc  G4HalfSpaceSolid.cc  G4HalfSpaceSphere.cc  G4HalfSpaceTest.cc  G4HalfSpaceWedge.cc  G4HalfSpaceXACircularCylinder.cc  G4HalfSpaceXAEllipticalCylinder.cc  G4HalfSpaceXYPlane.cc  G4HalfSpaceXZPlane.cc  G4HalfSpaceYACircularCylinder.cc  G4HalfSpaceYAEllipticalCylinder.cc  G4HalfSpaceYZPlane.cc  G4HalfSpaceZACircularCylinder.cc  G4HalfSpaceZAEllipticalCylinder.cc  G4HalfSpaceZone.cc  G4ImplicitSurfaceCGAL.cc  G4LoaderFluka.cc  G4SurfaceMeshCGAL.cc  G4VHalfSpace.cc  G4VSurfaceMesh.cc  utils.cc
test/: ActionInitialization.cc  ActionInitialization.hh  DetectorConstruction.cc  DetectorConstruction.hh  G4BoxInstrumented.cc  G4BoxInstrumented.hh  G4BoxInstrumented.icc  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  half_space.cc  vis.mac
test-input/: 00_trans.txt  01_aarbox.txt  02_aarbox_od.txt  03_rbox.txt  04_rbox_od.txt  05_sphere.txt  06_cone.txt  07_cone_od.txt  08_ellipsoid.txt  09_ellipsoid_od.txt  10_wedge.txt  11_wedge_od.txt  12_arbitrary.txt  13_arbitrary_od.txt  14_plane.txt  15_xplane.txt  15_xyzplane.txt  16_circularcylinder.txt  16_yplane.txt  17_zplane.txt  18_circularcylinder.txt  18_ellipticalcylinder.txt  19_xacircularcylinder.txt  20_quadric.txt  20_yacircularcylinder.txt  21_zacircularcylinder.txt  22_ellipticalcylinder.txt  23_xaellipticalcylinder.txt  24_yaellipticalcylinder.txt  25_zaellipticalcylinder.txt  26_quadric.txt  27_quadric_ellipsoid.txt  28_quadric_elliptic_paraboloid.txt  29_quadric_hyperbolic_paraboloid.txt  30_quadric_hyperboloid_onesheet.txt  31_quadric_hyperboloid_twosheet.txt  32_quadric_elliptic_cone.txt  33_quadric_elliptic_cylinder.txt  34_quadric_hyperbolic_cylinder.txt  35_quadric_parabolic_cylinder.txt  (+3 more)
test-input-fluka/: 1-box-blackhole.flair  1-box-blackhole.inp
